--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -226,6 +226,27 @@ footer{
   }
 }
 
+
+
+/* animation */
+.float_animation{
+    animation: float 4s ease-in-out infinite;
+}
+
+@keyframes float {
+	0% {
+		transform: translatey(0px);
+	}
+	50% { 
+		transform: translatey(-20px);
+	}
+	100% {
+		transform: translatey(0px);
+	}
+}
+
+
+
 /* media screen */
 @media screen and (max-width: 1024px) {
   .menu-button {
