--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,12 +5,12 @@
 }
 
 @font-face {
-  font-family: "collage";
-  src: url("../fonts/college.ttf") format("truetype");
+  font-family: "Noteworthy";
+  src: url("../fonts/Noteworthy-Lt.woff") format("truetype");
 }
 
 body {
-  font-family: "Comfortaa", sans-serif;
+  font-family: "Noteworthy", sans-serif;
 }
 
 html{
@@ -18,18 +18,74 @@ html{
 }
 
 /* utils */
-.collage_font {
-  font-family: "collage", sans-serif;
+.Noteworthy_font {
+  font-family: "Noteworthy", sans-serif;
+}
+
+.flex_center{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.flex_center_alignEnd{
+  display: flex;
+  justify-content: center;
+  align-items: end;
+}
+
+.flex_center_alignStart{
+  display: flex;
+  justify-content: center;
+  align-items: start;
+}
+
+.flex_col{
+  display: flex;
+  justify-content: center;
+  flex-direction:column;
+}
+
+.flex_between{
+  display: flex;
+  justify-content:space-between;
+  align-items: center;
+}
+
+.flex_align_center{
+  display: flex; 
+  align-items: center;
+}
+ 
+
+.text_bold {
+  -webkit-text-stroke: .5px white;
+}
+
+.text_bold_grey {
+  -webkit-text-stroke: 1px #5C5154;
 }
 
 .thin_stroke {
   -webkit-text-stroke: .5px black;
 }
 
-.bold_stroke {
-  -webkit-text-stroke: 2px black;
-  text-shadow: 0 8px 2px black;
+.medium_stroke {
+  -webkit-text-stroke: 1px #A9226A; 
+  text-shadow: 2px 5px 0px #A9226A;
 }
+
+.bold_stroke {
+  -webkit-text-stroke: 2px #A9226A; 
+  text-shadow: 3px 8px 0px #A9226A;
+}
+
+.btn_shadow{
+  box-shadow: 3px 5px 0px 0px #000000;
+}
+.text_ellipsis{
+  text-overflow: ellipsis;
+} 
 
 /* navbar */
 nav .logo h2 {
@@ -37,8 +93,8 @@ nav .logo h2 {
   /* -webkit-text-stroke: 1px black; */
 }
 
-nav li:hover a {
-  color: white;
+ul li:hover a {
+  color: #d1d1d1;
 }
 
 nav .buy {
@@ -54,9 +110,21 @@ nav .social .media:hover {
   transform: scale(1.1);
 }
 
+
+.nav_container::before{
+  content: "";
+  position: absolute;
+  left: 0;
+  width: 62%;
+  height: 100%;
+  background-color: #FE63C7;
+
+  border-radius: 0 0 20px 0;
+}
+
 /* menu button */
 .menu {
-  transform: translateX(-100%);
+  transform: scale(0); 
 }
 
 .menu-button {
@@ -103,130 +171,37 @@ nav .social .media:hover {
 .menu-button.active span:nth-child(3) {
   transform: rotate(-45deg);
   bottom: 1rem;
-}
-
-/* home */
-.bg_shadow {
-  box-shadow: 0px 4px 115.9px 301px #541f32cc;
-}
+} 
 
 /* about */
-.bg_shadow_about {
-  box-shadow: 0px 4px 115.9px 451px #0A343DC7;
+.about{
+  background: linear-gradient(166.96deg, #FF359E -0.76%, #FF309C 90.6%);
 }
 
-/* tokenomics */
-.tokenomics ,
-footer{
-    background: linear-gradient(180deg, #BB133E 0%, #780000 100%);
+/* token */
+.token_container{
+  box-shadow: 13px 15px 0px 0px #10500C;
 }
 
-.supply1 span{
-    background: linear-gradient(225.7deg, #ACF10E 7.72%, #8DF79C 50.89%, #85F7A2 91.46%);
+.bold_stroke_token {
+  -webkit-text-stroke: 2px white; 
+  text-shadow: 3px 8px 0px #148F0C;
 }
 
-.supply2 span{
-    background: linear-gradient(225.7deg, #ABFFC5 7.72%, #98F7B5 50.89%, #29A24E 91.46%);
+/* roadmap */
+.bold_stroke_roadmap {
+  -webkit-text-stroke: 2px white; 
+  text-shadow: 3px 8px 0px #148F0C;
 }
 
-
-.supply3 span{
-    background: linear-gradient(180deg, #98F5DF 0%, #29A083 100%);
+.roadmap_btn1{
+  background: linear-gradient(180deg, #DC2985 0%, #D84791 59.75%, #A02F69 106.48%); 
 }
 
-.supply4 span{
-    background:    linear-gradient(180deg, #FFFB56 0%, #F8F8F3 100%); 
+.roadmap_btn2{
+  background: linear-gradient(180deg, rgba(255, 255, 255, 0.9) 0%, rgba(230, 230, 230, 0.9) 56.06%, rgba(135, 126, 126, 0.9) 100%);
+
 }
-
-/* animation */
-/* text slider animation */
-
-/* marquee text slider */
-.marquee {
-  display: flex;
-  flex-direction: row;
-  font-size: 31.57px;
-  margin-top: var(--v-medium);
-  overflow: hidden;
-  position: relative;
-
-  width: 100%;
-  height: auto;
-
-  gap: 0;
-  padding-top: 0.5rem;
-}
-
-.text_slide_container::before {
-  content: "";
-  position: absolute;
-  left: 0;
-  top: 0;
-
-  height: 100%;
-  width: 100%;
-
-  background-image: url("../images/flag.png");
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
-}
-
-.marquee-left .marquee-el {
-  animation-direction: reverse;
-}
-
-.marquee-el {
-  align-items: center;
-  animation: scroll 100s linear 0s infinite;
-  animation-delay: 0s;
-  animation-play-state: running;
-  display: flex;
-  flex: 0 0 auto;
-  align-items: center;
-  flex-direction: row;
-  min-width: 100%;
-  transform: translateZ(0);
-  -webkit-transform: translateZ(0);
-  z-index: 1;
-}
-
-.marquee-el_reverse {
-  align-items: center;
-  animation: scroll 100s linear 0s infinite;
-  animation-delay: 0s;
-  animation-play-state: running;
-  display: flex;
-  flex: 0 0 auto;
-  align-items: center;
-  flex-direction: row;
-  min-width: 100%;
-  transform: translateZ(0);
-  -webkit-transform: translateZ(0);
-  z-index: 1;
-}
-
-.marquee span {
-  height: 100%;
-  color: white;
-  font-family: var(--font-p22_bold);
-  /* -webkit-text-stroke: .75px black; */
-  font-size: 64px;
-  font-weight: 700;
-  padding: 0 2.5rem;
-  text-transform: uppercase;
-}
-
-@keyframes scroll {
-  0% {
-    transform: translateX(0);
-  }
-  100% {
-    transform: translateX(-100%);
-  }
-}
-
-
 
 /* animation */
 .float_animation{
@@ -244,6 +219,20 @@ footer{
 		transform: translatey(0px);
 	}
 }
+
+.rotate_animation{
+  animation: rotate 10s linear infinite;
+}
+
+@keyframes rotate {
+0%{
+  transform: rotate(0deg);
+}
+100% { 
+  transform: rotate(380deg);
+} 
+}
+
 .zoom_outIn{
     animation:zoom_outIn 20s infinite linear;
   }
@@ -285,23 +274,30 @@ footer{
   }
 
   .menu {
-    transform: translateX(-100%);
+    /* transform: translateX(-100%); */
+    transform: scale(0);
   }
 
   .menu.active {
-    transform: translateX(0%);
+    transform: scale(1);
+  }
+
+  /* navbar */
+  .nav_container::before{ 
+    width: 100%;  
+    border-radius: 0 0 0px 0;
   }
 }
 
 @media screen and (max-width: 500px) {
     /* utils */
     .thin_stroke {
-        -webkit-text-stroke: 1.2px black;
+        -webkit-text-stroke: 1.2px #A9226A;
       }
       
       .bold_stroke {
-        -webkit-text-stroke: 1px black;
-        text-shadow: 0 3px 1px black;
+        -webkit-text-stroke: 1px #A9226A;
+        text-shadow: 0 3px 1px #A9226A;
       }
 
   /* navbar */
