--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -275,7 +275,7 @@ nav .social .media:hover {
        transform: scale(1);
    } 
    50%{
-       transform: scale(1.1);
+       transform: scale(.9);
    } 
   }
 
