--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -225,16 +225,19 @@ nav .social .media:hover {
 
 /* animation */
 .float_animation{
-    animation: float 4s ease-in-out infinite;
+    animation: float 10s ease-in-out infinite;
 }
 
 @keyframes float {
 	0% {
 		transform: translatey(0px);
 	}
-	50% { 
-		transform: translatey(-20px);
+	30% { 
+		transform: translatey(-10px);
 	}
+  60%{
+    transform: translatey(10px);
+  }
 	100% {
 		transform: translatey(0px);
 	}
@@ -266,7 +269,7 @@ nav .social .media:hover {
        transform: scale(1);
    } 
    50%{
-       transform: scale(1.4);
+       transform: scale(1.2);
    } 
   }
 
