--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,6 +13,22 @@ body {
   font-family: "Noteworthy", sans-serif;
 }
 
+body::-webkit-scrollbar {
+  width: 12px; 
+  height: 12px;  
+}
+
+body::-webkit-scrollbar-track {
+  background: #f1f1f1; 
+  border-radius: 10px; 
+}
+
+body::-webkit-scrollbar-thumb {
+  background: #FF3BB9;  
+  border-radius: 5px;  
+  border: 2px solid white;
+} 
+
 html{
     scroll-behavior: smooth;
 }
